--- a/APHKLogicExtractor/APHKLogicExtractor.csproj
+++ b/APHKLogicExtractor/APHKLogicExtractor.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="CommandLiners.Posix" Version="1.0.36" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="8.0.0" />
