--- a/APHKLogicExtractor/Properties/launchSettings.json
+++ b/APHKLogicExtractor/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "APHKLogicExtractor": {
       "commandName": "Project",
-      "commandLineArgs": "--RefName \"v4.0.9+218\" --WaypointStatefulnessRefName master --ManualStatelessWaypoints Can_Bench --Scenes Town --Scenes Mines_10 --WarpWaypoints Can_Stag --WarpWaypoints \"Warp-.*\" --WarpWaypoints Left_Elevator --WarpWaypoints Right_Elevator --WaypointCycleHandling TreatSelfReferencesAsFalse"
+      "commandLineArgs": "--RefName master --Scenes Town --Scenes Mines_10 --WarpWaypoints Can_Stag --WarpWaypoints \"Warp-.*\" --WarpWaypoints Left_Elevator --WarpWaypoints Right_Elevator --WarpWaypoints Upper_Tram --WarpWaypoints Lower_Tram --IgnoredWaypoints Start_State --IgnoredWaypoints Can_Bench"
     }
   }
 }
