Rewrite region extraction without substitution

--- a/APHKLogicExtractor/APHKLogicExtractor.csproj
+++ b/APHKLogicExtractor/APHKLogicExtractor.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLiners.Posix" Version="1.0.36" />
+    <PackageReference Include="DotNetGraph" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
