Allow local loading of logic through a serialized RandoContext or a manual StringWorldDefinition

--- a/APHKLogicExtractor/Properties/launchSettings.json
+++ b/APHKLogicExtractor/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "APHKLogicExtractor": {
-      "commandName": "Project",
-      "commandLineArgs": "--RefName master --Scenes Town --Scenes Mines_10"
+      "commandName": "Project"
     }
   }
 }
