Remove empty (no transitions or locations) regions when possible

--- a/APHKLogicExtractor/APHKLogicExtractor.csproj
+++ b/APHKLogicExtractor/APHKLogicExtractor.csproj
@@ -21,6 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="hkEmptyRegionsToKeep.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="hkStateConfig.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
