--- a/APHKLogicExtractor/Properties/launchSettings.json
+++ b/APHKLogicExtractor/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "APHKLogicExtractor": {
       "commandName": "Project",
-      "commandLineArgs": "--ClassifierModelPath \"./hkStateConfig.json\" --EmptyRegionsToKeepPath \"./hkEmptyRegionsToKeep.json\" --StartStateTerm Start_State"
+      "commandLineArgs": "--ClassifierModelPath \"./hkStateConfig.json\" --EmptyRegionsToKeepPath \"./hkEmptyRegionsToKeep.json\" --StartStateTerm Start_State --Jobs ExtractItems"
     }
   }
 }
