--- a/APHKLogicExtractor/Properties/launchSettings.json
+++ b/APHKLogicExtractor/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "APHKLogicExtractor": {
       "commandName": "Project",
-      "commandLineArgs": ""
+      "commandLineArgs": "--Input ./hkConfig.json --IgnoreCache"
     }
   }
 }
