--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -30,4 +30,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: ExportedLogic
-        path: output/
+        path: APHKLogicExtractor/bin/Debug/net8.0/output/
