Add graphviz install to workflow for SVG generation

--- a/.github/workflows/run-hk.yml
+++ b/.github/workflows/run-hk.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install Graphviz
+      run: sudo apt install graphviz
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
