Correctly classify EQUIPPEDCHARM modifier

--- a/APHKLogicExtractor/hkStateConfig.json
+++ b/APHKLogicExtractor/hkStateConfig.json
@@ -11,7 +11,7 @@
     "$SPENDSOUL",
     "$TAKEDAMAGE",
     "$LIFEBLOOD",
-    "$EQUIPCHARM",
+    "$EQUIPPEDCHARM",
     "$STAGSTATEMODIFIER"
   ],
   "OtherModifiers": [
